--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
                     <div class="contact-info card p-4 mb-4">
                         <h3 class="mb-4">Get in Touch</h3>
                         <div class="contact-details mb-4">
-                            <p><i class="fas fa-map-marker-alt me-2"></i> 1-1022 Wyandotte St W, Windsor, ON</p>
+                            <p><i class="fas fa-map-marker-alt me-2"></i> 2060 University Ave, Windsor, ON</p>
                             <p><i class="fas fa-phone me-2"></i> 289 788 3419</p>
                             <p><i class="fas fa-envelope me-2"></i> afrocanfoodsmarket@gmail.com</p>
                         </div>
@@ -138,4 +138,5 @@
     </script>
 </body>
 </html>
+
 
