--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="col-md-4">
                 <a href="shop.html?category=spices" class="category-link">
                     <div class="category-card">
-                        <img src="images/allspices.jpeg" alt="image of spices">
+                        <img src="images/spicesnaija.jpg" alt="image of spices">
                         <h3>Spices</h3>
                     </div>
                 </a>
@@ -139,4 +139,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
