--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div class="col-md-4">
                 <a href="shop.html?category=grains" class="category-link">
                     <div class="category-card">
-                        <img src="images/allgrains.jpeg" alt="image of grains">
+                        <img src="images/grainsnaija.jpeg" alt="image of grains">
                         <h3>Grains</h3>
                     </div>
                 </a>
@@ -139,5 +139,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
