--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="col-md-4">
                 <a href="shop.html?category=snacks" class="category-link">
                     <div class="category-card">
-                        <img src="images/allsnacks.jpg" alt="image of snacks">
+                        <img src="images/snacksnaija.png" alt="image of snacks">
                         <h3>Snacks</h3>
                     </div>
                 </a>
@@ -139,6 +139,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
